<resources>
    <string name="app_name">Exodus Network for Destiny 2</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">Log In</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="sign_up_button_label">Sign Up!</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="lightIcon">✦ %1$s</string>
    <string name="nav_hunter_character_title">Hunter</string>
    <string name="nav_titan_character_title">Titan</string>
    <string name="nav_warlock_character_title">Warlock</string>
    <string name="characters">Characters</string>
    <string name="lfg_feed">LFG Feed</string>
    <string name="refresh_account">Refresh Account</string>
    <string name="log_in">Log In</string>
    <string name="action_lfg_pause">Pause live feed</string>
    <string name="submitPost">Submit Post</string>
    <string name="select_platform">Select platform</string>
    <string name="xbox">Xbox</string>
    <string name="psn">PlayStation</string>
    <string name="battlenet">Battle.Net</string>
    <string name="loading">Please wait…</string>
    <string name="titan">Titan</string>
    <string name="hunter">Hunter</string>
    <string name="warlock">Warlock</string>
    <string name="gettingItemDatabase">Updating database, please wait…</string>
    <string name="lfgDescription">(Optional) Description..</string>
    <string name="haveMic">Mic?</string>
    <string name="xurSoldCount">Sold %1$s</string>
    <string-array name="activities">
        <item>Nightfall</item>
        <item>PvP</item>
        <item>Raid Lair</item>
        <item>Raid</item>
        <item>Raid - Misc</item>
        <item>Public Events</item>
        <item>Strikes</item>
        <item>Campaign</item>
        <item>Achievement</item>
        <item>Social</item>
    </string-array>
    <string-array name="nightfall">
        <item>Prestige</item>
        <item>Normal</item>
    </string-array>
    <string name="pvp">PvP</string>
    <string-array name="raidLair">
        <item>Eater of Worlds - Prestige (Fresh)</item>
        <item>Eater of Worlds - Prestige (Checkpoint)</item>
        <item>Eater of Worlds - Prestige (Boss)</item>
        <item>Eater of Worlds - Normal (Fresh)</item>
        <item>Eater of Worlds - Normal (Checkpoint)</item>
        <item>Eater of Worlds - Normal (Boss)</item>
    </string-array>
    <string name="raid">Raids</string>
    <string-array name="raidMisc">
        <item>Raid - Checkpoint Share</item>
        <item>Raid - Exploration</item>
    </string-array>
    <string-array name="publicEvents">
        <item>Public Event - Heroic</item>
        <item>Public Event - Normal</item>
    </string-array>
    <string name="strikes">Strikes</string>
    <string-array name="achievement">
        <item>Flawless Raider</item>
        <item>Misc</item>
    </string-array>
    <string-array name="empty">
        <item> - </item>
    </string-array>
    <string name="title_activity_lfgplayer">LFGPlayerActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="samIpsum">Look, just because I don\'t be givin\' no man a foot massage don\'t make it right for Marsellus to throw Antwone into a glass motherfuckin\' house, fuckin\' up the way the nigger talks. Motherfucker do that shit to me, he better paralyze my ass, \'cause I\'ll kill the motherfucker, know what I\'m sayin\'?</string>
    <string name="timePlayed">Play Time</string>
    <string name="PVPAvgLifespan">PVP Avg Lifespan</string>
    <string name="pvpKdRatio">PVP KDR</string>
    <string name="title_activity_character_inventory">CharacterInventoryActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="postDetails">Post Details</string>
    <string name="action_filter">Filter</string>
    <string name="transferItem">Transfer item to..</string>
    <string name="level">Level %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="vault">Vault</string>
    <string name="refresh">Refresh</string>
    <string name="xur">Xur</string>
    <string name="xurInventory">Xur\'s Inventory</string>
    <string name="manageInventory">Inventory</string>
    <string name="factionicon">Faction Icon</string>
    <string name="concatFactionLevel">Level %1$s</string>
    <string name="concatFactionProgress">%1$s / %2$s</string>
    <string name="checkingManifest">Checking manifest version...</string>
    <string name="error">Error</string>
    <string name="retry">Retry</string>
    <string name="none">None</string>
    <string name="milestones">Milestones</string>
    <string name="action_search">Search</string>
    <string name="refresh_auth">Refresh Auth Token</string>
    <string name="log_out">Log Out</string>
    <string name="story">Story</string>
    <string name="patrol">Patrol</string>
    <string name="no_pvp_stats_found">No PVP stats found.</string>
    <string name="no_raid_stats_found">No Raid stats found.</string>
    <string name="no_strike_stats_found">No Strikes stats found.</string>
    <string name="no_story_stats_found">No Story stats found</string>
    <string name="no_patrol_stats_found">No Patrol stats found.</string>
    <string name="account_stats">Account Stats</string>
    <string name="empty_stat_value">-</string>
    <string name="debug_item_type">Item Type</string>
    <string name="debug_item_name">Item Name</string>
    <string name="transfer_item_to">Transfer item to...</string>
    <string name="equip_on">Equip on...</string>
    <string name="debug_primary_stat">300</string>
    <string name="header_decoration_spacer">20000</string>
    <string name="item_transfer">Item Transfer</string>
    <string name="descriptionCountPlaceholder">0/50</string>
    <string name="rpm">Rounds Per Minute</string>
    <string name="magazine">Magazine Size</string>
    <string name="item_inspect_screenshot">Screenshot of item</string>
    <string name="settings">Settings</string>
    <string name="app_name_short">Exodus Network</string>
    <string name="general">General</string>
    <string name="general_summary">General App Settings</string>
    <string name="debug">Debug</string>
    <string name="settings_update_manifest">Update Bungie Manifest</string>
    <string name="settings_redownload_subtext">If icons/resources aren\'t loading, try re-downloading the manifest</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="back_button_drawer">Open drawer on back button pressed</string>
    <string name="checklists">Checklists</string>
    <string name="checklist_spinner">Checklist Spinner</string>
    <string name="title_activity_checklist">ChecklistActivity</string>
    <string name="latent_memories">Latent Memories</string>
    <string name="ghost_lore">Ghost Lore</string>
    <string name="journals">Cayde-6 Journals</string>
    <string name="sleeper_nodes">Sleeper Nodes</string>
    <string name="raid_lairs">Raid Lairs</string>
    <string name="item_collection">Item Collection</string>
    <string name="checklist_icon">Checklist Icon</string>
    <string name="item_details">Item Details</string>
    <string name="viewAccounts">View account data in database</string>
    <string name="title_activity_manifest_search">Manifest Items</string>
    <string name="selected">Selected:</string>
    <string name="display_source_text">\"You\'ll need a good scope to get this done. Or maybe get real close.\" —Banshee-44</string>
    <string name="rewards">REWARDS:</string>
    <string name="overview">Overview</string>
    <string name="xur_arrives_in">Arrives in:</string>
    <string name="xur_departs_in">Departs in:</string>
    <string name="getXurLocation">Get Location</string>
    <string name="xurWorldUnknown">\???</string>
    <string name="xurRegionUnknown">\??</string>
    <string name="collectibles">Collectibles</string>
    <string name="account_collectables">Account Collectables</string>
    <string name="all">All</string>
    <string name="valor_rank">Valor Rank</string>
    <string name="glory_rank">Glory Rank</string>
    <string name="infamy_rank">Infamy Rank</string>
    <string name="title_activity_settings_tester">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="open_drawer_back_press">Open drawer on back button</string>
    <string name="default_back_press_preference">false</string>
    <string name="accountChecklists">Account Checklists</string>
    <string name="characterChecklists">Character Checklists</string>
    <string name="profileProgressionError">An error occurred while trying to retrieve profile progressions.</string>
    <string name="zero">0</string>
    <string name="guardian">Guardian</string>
    <string name="title_activity_settings_test">Settings</string>
    <string name="braytechWarning">Location data may not be up to date.</string>
</resources>