<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
        <!--android:id="@+id/pause_live_lfg_feed"-->
        <!--android:icon="@drawable/ic_pause_circle_outline_black_24dp"-->
        <!--android:title="@string/action_lfg_pause"-->
        <!--app:showAsAction="ifRoom"/>-->

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_icon"
        app:showAsAction="always"
        android:title="@string/refresh"
    />

    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/icon_filter_white"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="ifRoom"

        >

        <menu>
            <item
                android:id="@+id/filter_none"
                android:icon="@drawable/icon_clear"
                android:title="@string/none"/>
            <item
                android:id="@+id/filter_psn"
                android:icon="@drawable/icon_psn"
                android:title="@string/psn"/>
            <item
                android:id="@+id/filter_xbox"
                android:icon="@drawable/icon_xbl"
                android:title="@string/xbox"/>
            <item
                android:id="@+id/filter_bnet"
                android:icon="@drawable/icon_blizzard"
                android:title="@string/battlenet"/>
        </menu>
    </item>
</menu>
