<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_lfg"
            android:icon="@drawable/ic_group_add_black_24dp"
            android:title="@string/lfg_feed"
            />
        <!--<item-->
            <!--android:id="@+id/nav_characters"-->
            <!--android:icon="@drawable/ic_group_black_24dp"-->
            <!--android:title="@string/characters" />-->

        <item
            android:id="@+id/nav_inventory_fragment"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/manageInventory"
            />

        <item
            android:id="@+id/nav_account_stats"
            android:icon="@drawable/icon_stats"
            android:title="@string/account_stats"
            />

        <item
            android:id="@+id/nav_milestones"
            android:icon="@drawable/milestone_icon"
            android:title="@string/milestones"
            />

        <item
            android:id="@+id/xur"
            android:icon="@drawable/the_nine_icon"
            android:title="@string/xur" />

        <item
            android:visible="true"
            android:id="@+id/nav_refresh_auth"
            android:icon="@drawable/icon_key"
            android:title="@string/refresh_auth" />

        <item
            android:visible="true"
            android:id="@+id/nav_refresh_account"
            android:icon="@drawable/ic_refresh_black_24dp"
            android:title="@string/refresh_account" />

        <!--<item-->
            <!--android:visible="true"-->
            <!--android:id="@+id/nav_log_in"-->
            <!--android:icon="@drawable/ic_account_circle_black_24dp"-->
            <!--android:title="@string/log_in" />-->

    </group>


</menu>

