<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.SettingsActivity">

    <RelativeLayout
        android:id="@+id/settings_general_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/settings_general_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/general"
            android:textColor="@color/warmindAccent"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/first_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Button one"
            android:textColor="@color/colorWhite"
            android:textAlignment="viewStart"
            android:background="@android:color/transparent"
            android:layout_below="@id/settings_general_header"
            android:clickable="true"
            android:focusable="true"

            />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_debug_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_general_container"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/settings_debug_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/debug"
            android:textColor="@color/warmindAccent"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/settings_redownload_manifest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_debug_header"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/settings_update_manifest"
            android:textColor="@color/colorWhite"
            android:textAlignment="viewStart"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/settings_redownload_manifest_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_redownload_manifest"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:text="@string/settings_redownload_subtext"
            android:textSize="13sp"
            android:textColor="@color/placeholderHint"
            />


        <TextView
            android:id="@+id/settings_log_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_redownload_manifest_subtext"
            android:padding="10dp"
            android:text="@string/log_out"
            android:textColor="@color/colorWhite"
            android:textAlignment="viewStart"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toBottomOf="@id/settings_redownload_manifest"
            android:clickable="true"
            android:focusable="true"

            />


    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>