<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".settings.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <RelativeLayout
        android:id="@+id/settings_general_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/settings_general_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/general"
            android:textColor="@color/warmindAccent"
            android:textSize="15sp"
            />

        <RelativeLayout
            android:id="@+id/settings_backbutton_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_general_header"
            android:clickable="true"
            android:focusable="true"
            >

            <TextView
                android:id="@+id/first_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/back_button_drawer"
                android:textColor="@color/colorWhite"
                android:textAlignment="viewStart"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBaseline="@id/first_button"
                android:theme="@style/WarmindSwitch"

                />

        </RelativeLayout>



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/settings_debug_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_general_container"
        android:padding="10dp"
        >

        <TextView
            android:id="@+id/settings_debug_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/debug"
            android:textColor="@color/warmindAccent"
            android:textSize="15sp"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/settings_debug_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/settings_debug_header"

            >

        </android.support.v7.widget.RecyclerView>

        <!--<TextView-->
            <!--android:id="@+id/settings_redownload_manifest"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/settings_debug_header"-->
            <!--android:paddingStart="10dp"-->
            <!--android:paddingEnd="10dp"-->
            <!--android:paddingBottom="5dp"-->
            <!--android:text="@string/settings_update_manifest"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:textAlignment="viewStart"-->
            <!--android:background="@android:color/transparent"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->
            <!--/>-->

        <!--<TextView-->
            <!--android:id="@+id/settings_redownload_manifest_subtext"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/settings_redownload_manifest"-->
            <!--android:paddingStart="10dp"-->
            <!--android:paddingEnd="10dp"-->
            <!--android:text="@string/settings_redownload_subtext"-->
            <!--android:textSize="13sp"-->
            <!--android:textColor="@color/placeholderHint"-->
            <!--/>-->

        <!--<TextView-->
            <!--android:id="@+id/settings_account_db"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/viewAccounts"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--/>-->

        <!--<TextView-->
            <!--android:id="@+id/settings_log_out"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_below="@id/settings_redownload_manifest_subtext"-->
            <!--android:paddingTop="15dp"-->
            <!--android:paddingBottom="15dp"-->
            <!--android:paddingStart="10dp"-->
            <!--android:paddingEnd="10dp"-->
            <!--android:text="@string/log_out"-->
            <!--android:textColor="@color/colorWhite"-->
            <!--android:textAlignment="viewStart"-->
            <!--android:background="@android:color/transparent"-->
            <!--app:layout_constraintTop_toBottomOf="@id/settings_redownload_manifest"-->
            <!--android:clickable="true"-->
            <!--android:focusable="true"-->

            <!--/>-->


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>